[package]
name = "dracula"
version = "0.1.0"
authors = ["Luigi Teschio  <gigitux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
gtk="0.8.1"
glib = "0.9.3"
gio = "0.8.1"
rust-ini = "0.15"

# [dependencies.gtk]
# version = "0.8.1"
# features = ["v3_16"]
